# monad-revm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/monad-revm/: Cargo.toml
crates/monad-revm/src/: cfg.rs  evm.rs  handler.rs  instructions.rs  lib.rs  precompiles.rs  spec.rs
crates/monad-revm/src/staking/: abi.rs  mod.rs  storage.rs
src/: lib.rs
