[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Haythem Sellami - Category Labs <hsellami@category.xyz>"]
license = "MIT"
repository = "https://github.com/haythemsellami/monad-revm"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.dependencies]
monad-revm = { version = "0.1.0", path = "crates/monad-revm", default-features = false }

# revm
revm = { version = "34.0.0", default-features = false }
auto_impl = "1"

# alloy-evm (for PrecompilesMap integration with foundry/anvil)
alloy-evm = { git = "https://github.com/haythemsellami/evm", branch = "fix/monad-precompiles-factory", default-features = false }

# misc
serde = { version = "1", default-features = false, features = ["derive", "rc"] }
rstest = "0.24"
