[package]
name = "monad-revm"
description = "Monad variant of Revm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["monad", "evm", "revm", "ethereum"]

[lints]
workspace = true

[dependencies]
# revm
revm.workspace = true
auto_impl.workspace = true

# Optional
serde = { workspace = true, optional = true }
alloy-evm = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst", "optional_no_base_fee"]
std = ["serde?/std", "revm/std", "alloy-evm?/std"]
serde = ["dep:serde", "revm/serde"]
portable = ["revm/portable"]
c-kzg = ["revm/c-kzg"]
secp256k1 = ["revm/secp256k1"]
blst = ["revm/blst"]
# Enable alloy-evm integration for PrecompilesMap (used by foundry/anvil)
alloy-evm = ["dep:alloy-evm"]

# Dev features for testing
dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_no_base_fee",
]
memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_no_base_fee = ["revm/optional_no_base_fee"]
